--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,11 @@ rvm:
 - 2.4.1
 - 2.3.4
 - 2.2.7
+
+before_install:
+  - gem update --system
+  - gem --version
+  - bundle install
+
+env:
+  -"WOODBOT_ENV=production"
